update file css lan 2

--- a/BTT/Building/index.css
+++ b/BTT/Building/index.css
@@ -158,3 +158,43 @@ body {
   transform: translateY(200px) rotateX(-90deg) rotate(180deg) translateZ(100px);
 }
 
+/*tầng 6*/
+.cube > div:nth-child(31) {
+  transform: translateY(400px) rotateX(90deg) translateZ(100px) ;
+}
+.cube > div:nth-child(32) {
+  transform: translateY(400px) translateZ(100px);
+}
+.cube > div:nth-child(33) {
+  transform: translateY(400px) rotateY(90deg) translateZ(100px);
+}
+.cube > div:nth-child(34) {
+  transform: translateY(400px) rotateY(180deg) translateZ(100px);
+}
+.cube > div:nth-child(35) {
+  transform: translateY(400px) rotateY(-90deg) translateZ(100px);
+}
+.cube > div:nth-child(36) {
+  transform: translateY(400px) rotateX(-90deg) rotate(180deg) translateZ(100px);
+}
+
+/*tầng 7*/
+.cube > div:nth-child(37) {
+  transform: translateY(600px) rotateX(90deg) translateZ(100px) ;
+}
+.cube > div:nth-child(38) {
+  transform: translateY(600px) translateZ(100px);
+}
+.cube > div:nth-child(39) {
+  transform: translateY(600px) rotateY(90deg) translateZ(100px);
+}
+.cube > div:nth-child(40) {
+  transform: translateY(600px) rotateY(180deg) translateZ(100px);
+}
+.cube > div:nth-child(41) {
+  transform: translateY(600px) rotateY(-90deg) translateZ(100px);
+}
+.cube > div:nth-child(42) {
+  transform: translateY(600px) rotateX(-90deg) rotate(180deg) translateZ(100px);
+}
+
