add event click for fill question

--- a/Template/4AESN/testChoose.html
+++ b/Template/4AESN/testChoose.html
@@ -349,16 +349,16 @@
                     これからおせわになります
                     <!-- Note: Component -->
                     <span
-                      class="q-3-dot">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                      class="q-3-dot" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     さようなら
                     <span
-                      class="q-3-dot">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                      class="q-3-dot" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     こちらこそよおろしく
                     <span
-                      class="q-3-dot">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                      class="q-3-dot" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     おせわになり
                     <span
-                      class="q-3-dot">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                      class="q-3-dot" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     ありがとう.
 
                   </p>
@@ -367,29 +367,29 @@
                   <div class="q-list-button ml-5">
                     <!-- Note: Cái này cũng là 1 component -->
                     <div class="q-1-btn ml-3 mr-3">
-                      <button class="btn btn-primary btn-icon-split q-button-answer">
-                        <span class="text">こ</span>
+                      <button class="btn btn-primary btn-icon-split q-button-answer answer-1" data-index="0">
+                        <span class="text blank">これから</span>
                       </button>
                     </div>
                     <div class="q-1-btn ml-3 mr-3">
-                      <button class="btn btn-primary btn-icon-split q-button-answer">
-                        <span class="text">こ</span>
+                      <button class="btn btn-primary btn-icon-split q-button-answer answer-2" data-index="1">
+                        <span class="text blank">さようなら</span>
                       </button>
                     </div>
                     <div class="q-1-btn ml-3 mr-3">
-                      <button class="btn btn-primary btn-icon-split q-button-answer">
-                        <span class="text">こ</span>
+                      <button class="btn btn-primary btn-icon-split q-button-answer answer-3" data-index="2">
+                        <span class="text blank">おせわになり</span>
                       </button>
                     </div>
                     <div class="q-1-btn ml-3 mr-3">
-                      <button class="btn btn-primary btn-icon-split q-button-answer">
-                        <span class="text">こ</span>
+                      <button class="btn btn-primary btn-icon-split q-button-answer answer-4" data-index="3">
+                        <span class="text blank">ありがとう</span>
                       </button>
                     </div>
                   </div>
 
                   <!-- Note: cái này sẽ hiện ra sau khi người dùng trả lời -->
-                  <div class="q-continue mb-3 mr-2">
+                  <div class="q-continue mt-3 mb-3 mr-2">
                     <a href="#" class="btn btn-info w-25 btn-lg float-right">
                       Continue >
                     </a>
@@ -441,6 +441,7 @@
       </div>
     </div>
   </div>
+  <script src="js/animation.js"></script>
   <!-- Bootstrap core JavaScript-->
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
