cap nhat du lieu

--- a/Template/4AESN/testABCD.html
+++ b/Template/4AESN/testABCD.html
@@ -350,12 +350,14 @@
                   <p>Select one: </p>
                   <!-- Note: Mỗi 1 div q-abcd-answer tương đương với 1 button. Gán sự kiện onclick vào luôn nhé -->
                   <div class="q-abcd-answer clearfix" >
-                    <div class="q-abcd-btn float-left">
-                      <img src="img/q-answer-a.png" alt="A" class="img-fluid q-op-image q-option">
-                    </div>
-                    <div class="q-abcd-content float-left">
-                      あ
-                    </div>
+                    <button>
+                        <div class="q-abcd-btn float-left">
+                        <img src="img/q-answer-a.png" alt="A" class="img-fluid q-op-image q-option">
+                        </div>
+                        <div class="q-abcd-content float-left">
+                          あ
+                        </div>
+                    </button>
                   </div>
                   <hr>
                   <div class="q-abcd-answer clearfix">
