--- a/Template/4AESN/chooseLevel.html
+++ b/Template/4AESN/chooseLevel.html
@@ -16,14 +16,14 @@
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
-
+  <link rel="stylesheet" type="text/css" href="css/login.css">
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+
 </head>
 
-<body class="bg-gradient-primary"
-  style="background: url(img/b2.jpg) no-repeat; padding: 100px; background-size: cover;">
+<body class="bg-gradient-primary body--choose">
 
   <div class="container">
 
